--- a/FWS_client/mainwindow.ui
+++ b/FWS_client/mainwindow.ui
@@ -110,13 +110,6 @@
        <item row="1" column="0" colspan="2">
         <widget class="QListView" name="appointmentList"/>
        </item>
-       <item row="2" column="0">
-        <widget class="QDateTimeEdit" name="apoitnmentDateTime">
-         <property name="calendarPopup">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
        <item row="2" column="1">
         <widget class="QPushButton" name="getAppoitnmentButton">
          <property name="text">
@@ -130,6 +123,9 @@
           <string>----</string>
          </property>
         </widget>
+       </item>
+       <item row="2" column="0">
+        <widget class="QTimeEdit" name="appointmentTime"/>
        </item>
       </layout>
      </widget>
