--- a/FWS_client/mainwindow.ui
+++ b/FWS_client/mainwindow.ui
@@ -24,45 +24,14 @@
        <enum>QFrame::Raised</enum>
       </property>
       <layout class="QGridLayout" name="gridLayout_4">
-       <item row="2" column="0">
-        <widget class="QPushButton" name="fileRemoveButton">
-         <property name="text">
-          <string>Remove</string>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="1">
-        <widget class="QPushButton" name="fileAddButton">
-         <property name="text">
-          <string>Add...</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="1">
+       <item row="1" column="1">
         <widget class="QPushButton" name="programButton">
          <property name="text">
           <string>Program</string>
          </property>
         </widget>
        </item>
-       <item row="4" column="1">
-        <widget class="QPushButton" name="connectButton">
-         <property name="text">
-          <string>Connect</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="0" colspan="2">
-        <widget class="QListView" name="fileList"/>
-       </item>
-       <item row="0" column="0">
-        <widget class="QLabel" name="label_3">
-         <property name="text">
-          <string>FIles</string>
-         </property>
-        </widget>
-       </item>
-       <item row="4" column="0" rowspan="2">
+       <item row="2" column="0" rowspan="2">
         <widget class="QFrame" name="connectionFrame">
          <property name="frameShape">
           <enum>QFrame::StyledPanel</enum>
@@ -88,6 +57,16 @@
          </layout>
         </widget>
        </item>
+       <item row="2" column="1">
+        <widget class="QPushButton" name="connectButton">
+         <property name="text">
+          <string>Connect</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0" colspan="2">
+        <widget class="FileList" name="filesList" native="true"/>
+       </item>
       </layout>
      </widget>
     </item>
@@ -101,31 +80,7 @@
       </property>
       <layout class="QGridLayout" name="gridLayout_2">
        <item row="0" column="0">
-        <widget class="QLabel" name="label">
-         <property name="text">
-          <string>Appointments</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="0" colspan="2">
-        <widget class="QListView" name="appointmentList"/>
-       </item>
-       <item row="2" column="1">
-        <widget class="QPushButton" name="getAppoitnmentButton">
-         <property name="text">
-          <string>Get apponintment</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="0">
-        <widget class="QLabel" name="appoitnmentGetLabel">
-         <property name="text">
-          <string>----</string>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="0">
-        <widget class="QTimeEdit" name="appointmentTime"/>
+        <widget class="AppointmentsView" name="appointmentsView" native="true"/>
        </item>
       </layout>
      </widget>
@@ -156,6 +111,20 @@
    </property>
   </action>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>FileList</class>
+   <extends>QWidget</extends>
+   <header>filelist.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>AppointmentsView</class>
+   <extends>QWidget</extends>
+   <header>appointmentsview.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
