--- a/FWS_client/src/mainwindow.ui
+++ b/FWS_client/src/mainwindow.ui
@@ -24,48 +24,11 @@
        <enum>QFrame::Raised</enum>
       </property>
       <layout class="QGridLayout" name="gridLayout_4">
-       <item row="1" column="1">
-        <widget class="QPushButton" name="programButton">
-         <property name="text">
-          <string>Program</string>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="0" rowspan="2">
-        <widget class="QFrame" name="connectionFrame">
-         <property name="frameShape">
-          <enum>QFrame::StyledPanel</enum>
-         </property>
-         <property name="frameShadow">
-          <enum>QFrame::Raised</enum>
-         </property>
-         <layout class="QGridLayout" name="gridLayout_3">
-          <item row="0" column="0">
-           <widget class="QLabel" name="appointmentStatusLabel">
-            <property name="text">
-             <string>Not Appointment time</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="0">
-           <widget class="QLabel" name="connectionStatusLabel">
-            <property name="text">
-             <string>Not connected</string>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </widget>
-       </item>
-       <item row="2" column="1">
-        <widget class="QPushButton" name="connectButton">
-         <property name="text">
-          <string>Connect</string>
-         </property>
-        </widget>
-       </item>
        <item row="0" column="0" colspan="2">
         <widget class="FileList" name="filesList" native="true"/>
+       </item>
+       <item row="1" column="0" colspan="2">
+        <widget class="ConnectionWidget" name="widget" native="true"/>
        </item>
       </layout>
      </widget>
@@ -122,6 +85,12 @@
    <class>AppointmentsView</class>
    <extends>QWidget</extends>
    <header>appointmentsview.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>ConnectionWidget</class>
+   <extends>QWidget</extends>
+   <header>connectionwidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
